WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57712
"Search in Spotlight" broken in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=57712
Summary
"Search in Spotlight" broken in WebKit2
Sam Weinig
Reported
2011-04-02 15:15:32 PDT
"Search in Spotlight" broken in WebKit2
Attachments
Patch
(6.99 KB, patch)
2011-04-02 15:21 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Patch
(6.73 KB, patch)
2011-04-02 16:05 PDT
,
Sam Weinig
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-04-02 15:21:55 PDT
Created
attachment 87987
[details]
Patch
Sam Weinig
Comment 2
2011-04-02 15:25:24 PDT
There were two options for addressing this: 1) Proxy call to the search with spotlight to the UIProcess. 2) Add selected text to the context menu state sent to the UIProcess for each context menu. I implemented 1. Though 2 would be easy as well.
Early Warning System Bot
Comment 3
2011-04-02 15:32:04 PDT
Attachment 87987
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/8185550
Build Bot
Comment 4
2011-04-02 15:44:57 PDT
Attachment 87987
[details]
did not build on win: Build output:
http://queues.webkit.org/results/8185551
Sam Weinig
Comment 5
2011-04-02 16:05:26 PDT
Created
attachment 87988
[details]
Patch
Oliver Hunt
Comment 6
2011-04-02 16:07:50 PDT
Comment on
attachment 87988
[details]
Patch r=me, you're taking after darin with change + refactoring :P
Sam Weinig
Comment 7
2011-04-02 16:19:56 PDT
Committed
r82779
: <
http://trac.webkit.org/changeset/82779
>
WebKit Review Bot
Comment 8
2011-04-02 17:21:32 PDT
http://trac.webkit.org/changeset/82779
might have broken Qt Linux Release The following tests are not passing: inspector/debugger/debugger-activation-crash2.html storage/change-version-handle-reuse.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug